# veeam_test

./: CMakeLists.txt  README.md  main.cpp
include/: error_codes.h  synchro_logic.h
src/: synchro_logic.cpp
test_src/test_src_folder_a/: f_a.txt
